[package]
name = "plonky3-z3-test"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git" }

rand = "0.8.5"
tracing = "0.1.37"

z3 = { git = "https://github.com/prove-rs/z3.rs.git" }
z3-sys = { git = "https://github.com/prove-rs/z3.rs.git" }

[patch."https://github.com/Plonky3/Plonky3"]
p3-air = { path = "../Plonky3/air" }
p3-baby-bear = { path = "../Plonky3/baby-bear" }
p3-field = { path = "../Plonky3/field" }
p3-keccak-air = { path = "../Plonky3/keccak-air" }
p3-matrix = { path = "../Plonky3/matrix" }
p3-uni-stark = { path = "../Plonky3/uni-stark" }
p3-util = { path = "../Plonky3/util" }
